// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshots > matches snapshot — default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 px-4 py-2"
>
  Default
</button>
`;

exports[`Button snapshots > matches snapshot — destructive variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-red-500 text-slate-50 hover:bg-red-500/90 dark:bg-red-900 dark:text-slate-50 dark:hover:bg-red-900/90 h-10 px-4 py-2"
>
  Delete
</button>
`;

exports[`Button snapshots > matches snapshot — large size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-11 rounded-md px-8"
>
  Large
</button>
`;

exports[`Button snapshots > matches snapshot — loading 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 px-4 py-2"
>
  Loading
  <svg
    aria-label="Loading"
    class="lucide lucide-loader-circle size-4 animate-spin"
    fill="none"
    height="24"
    role="status"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</button>
`;
